--- a/app/views/instance_admin/manage/transfers/show.html.haml
+++ b/app/views/instance_admin/manage/transfers/show.html.haml
@@ -118,6 +118,8 @@
               %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.reference')
               %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.id')
               %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.lessor')
+              %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.amount')
+              %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.refunded_amount')
               %th= t('instance_admin.manage.transfers.payments_included_in_the_payout_for_section.paid_at')
 
           %tbody
@@ -126,5 +128,8 @@
                 %td= payment.payable_type
                 %td= payment.payable_id
                 %td= payment.payable.try(:user).try(:name)
+                %td= number_to_currency_symbol(payment.currency, Money.new(payment.amount))
+                %td= number_to_currency_symbol(payment.currency, Money.new(payment.refunds.sum :amount))
+
                 %td= l(payment.created_at, format: :long)
 
