--- a/app/views/instance_admin/theme/file_uploads/_asset.html.haml
+++ b/app/views/instance_admin/theme/file_uploads/_asset.html.haml
@@ -1,18 +1,18 @@
-= content_tag(:div, :id => dom_id(asset), :class => "gal-item", :"data-url" => image_path(asset.url_content)) do
+= content_tag(:div, :id => dom_id(asset), :class => "gal-item", :"data-url" => image_path(asset.url)) do
   = link_to image_tag('ckeditor/filebrowser/images/gal_del.png',
     :title => I18n.t('ckeditor.buttons.delete')),
     instance_admin_theme_file_upload_path(asset),
-    :method => :delete, 
+    :method => :delete,
     :remote => true,
     :data => {:confirm => t('ckeditor.confirm_delete')},
     :class => "fileupload-cancel gal-del"
-  
+
   .fileupload-file.gal-inner-holder
     .img
-      = link_to image_tag(asset.url_thumb, :title => asset.filename), asset.url_content, target: '_blank'
+      = link_to image_tag(asset.url_thumb, :title => asset.filename), asset.url, target: '_blank'
     .img-data
       .img-name
-        = link_to asset.filename, asset.url_content, target: '_blank'
+        = link_to asset.filename, asset.url, target: '_blank'
       .time-size
         .time
           = asset.format_created_at
