NM-3253 customizable search inputs placeholders per TransactableType

--- a/app/views/home/search/_geolocation.liquid
+++ b/app/views/home/search/_geolocation.liquid
@@ -2,7 +2,7 @@
   <div class="geolocation no-bookings">
     <span class="ico-crosshairs"></span>
   </div>
-  <input class="query" name="loc" placeholder="{{ 'homepage.search_field_placeholder.location' | translate }}" type="text" />
+  <input class="query" name="loc" placeholder="{{ transactable_type.geolocation_placeholder }}" type="text" />
 </div>
 <input id="lat" name="lat" type="hidden" value>
 <input id="lng" name="lng" type="hidden" value>
