--- a/app/views/search/mixed/_header.html.haml
+++ b/app/views/search/mixed/_header.html.haml
@@ -27,7 +27,7 @@
             .keyword-input.span4
               .search-loop-icon
                 %span.ico-search
-              %input.query{:name => "query", :placeholder => platform_context.search_by_keyword_placeholder, :type => "text", :value => @searcher.keyword, :autocomplete => "off"}
+              %input.query{:name => "query", :placeholder => @searcher.transactable_type.fulltext_placeholder, :type => "text", :value => @searcher.keyword, :autocomplete => "off"}
           .search-icon.btn.btn-green.span2
             %span.ico-search
               %span.text= t 'homepage.buttons.search'
