--- a/app/assets/stylesheets/blog/style.css.scss
+++ b/app/assets/stylesheets/blog/style.css.scss
@@ -14,6 +14,16 @@ body.blog {
   }
 
   .blog-container {
+    .blog-nav {
+      padding-bottom:45px;
+      width:100%;
+      float: left;
+      .rss-feed-button {
+        float:right;
+        color: #1a7fbb;
+        padding-top:12px;
+      }
+    }
     .content, .blog-post {
       img {
         height: auto !important;
