IDM-36 - Changing join now link

--- a/app/community_views/home/_home_not_signed_in.html.liquid
+++ b/app/community_views/home/_home_not_signed_in.html.liquid
@@ -2,7 +2,7 @@
   <div class="contain">
     <h2 class="hx">{{ 'hero_slogan' | translate }}</h2>
     <p>{{ 'hero_description' | translate }}</p>
-    <p class="action"><a href="/auth/saml?wizard=onboarding" class="button-a large orange">{{ 'join_now' | translate }}</a></p>
+    <p class="action"><a href="https://software.intel.com/registration/dev-mesh/" class="button-a large orange">{{ 'join_now' | translate }}</a></p>
   </div>
 </div>
 <div class="wrap-a">
