--- a/app/views/instance_admin/manage/service_types/_form.html.haml
+++ b/app/views/instance_admin/manage/service_types/_form.html.haml
@@ -58,6 +58,7 @@
       .input-container.col-xs-6
         = f.input :cancellation_policy_penalty_percentage do
           = f.input_field :cancellation_policy_penalty_percentage, type: 'tel', class: 'form-control'
+        .info Penalty fee works only when payment is processed with Stripe or Braintree Payment Gateway
 
   .content-container
     %h4= t('instance_admin.manage.service_types.booking_settings')
