--- a/app/community_views/shared/_activity_status_footer.html.haml
+++ b/app/community_views/shared/_activity_status_footer.html.haml
@@ -4,11 +4,12 @@
   %p.actions
     = link_to t(:comment), '#', data: { comment: '' }
 
-    %span &bull;
-    - if report = event.reported_by(current_user, request.remote_ip)
-      = link_to t(:cancel_spam_report), url_for([event, report]), remote: true, method: :delete
-    - elsif current_user
-      = link_to t(:report_as_spam), url_for([event, event.spam_reports.build]), remote: true, method: :post
+    - if event.is_reportable?
+      %span &bull;
+      - if report = event.reported_by(current_user, request.remote_ip)
+        = link_to t(:cancel_spam_report), url_for([event, report]), remote: true, method: :delete
+      - elsif current_user
+        = link_to t(:report_as_spam), url_for([event, event.spam_reports.build]), remote: true, method: :post
 
 
   = render 'comments/activity_feed_comments', comment: event.comments.build, is_active: is_active
