--- a/app/views/instance_admin/reports/projects/index.html.haml
+++ b/app/views/instance_admin/reports/projects/index.html.haml
@@ -7,10 +7,10 @@
         .filters
           .filter.filter-week-start
             = label_tag :week_start, t('instance_admin.reports.projects.week_start')
-            = week_field_tag :week_start, DateTime.now.utc.weeks_ago(1).strftime('%Y-W%W')
+            = week_field_tag :week_start, DateTime.now.utc.weeks_ago(1).strftime('%Y-W%V')
           .filter.filter-week-end
             = label_tag :week_end, t('instance_admin.reports.projects.week_end')
-            = week_field_tag :week_end, DateTime.now.utc.weeks_ago(1).strftime('%Y-W%W')
+            = week_field_tag :week_end, DateTime.now.utc.weeks_ago(1).strftime('%Y-W%V')
           .filter.filter-download-report
             = link_to t('instance_admin.reports.download_report_as_csv'), '', data: { 'download-report' => 1, 'report-url' => download_report_instance_admin_reports_projects_path(format: 'csv') }, class: "btn btn-blue"
 
