--- a/app/views/shared/payment_methods/_express_checkout.html.haml
+++ b/app/views/shared/payment_methods/_express_checkout.html.haml
@@ -1,5 +1,5 @@
 .row-fluid
-  - if f.object.express_token.blank?
+  - if f.object.express_payer_id.blank?
     = image_submit_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif")
   - else
     = t('buy_sell_market.checkout.payment_authorized')
