--- a/app/community_views/shared/_head.html.haml
+++ b/app/community_views/shared/_head.html.haml
@@ -1,7 +1,14 @@
 %head
   %meta{:charset => "utf-8"}/
-  %title
-    = t :global_page_title
+  %title= title_tag
+  %meta{:content => meta_description_content, :name => "description"}/
+
+  %meta{property: "og:title", content: title_tag}/
+  %meta{property: "og:site_name", content: current_instance.name}/
+  %meta{property: "og:url", content: request.original_url}/
+  %meta{property: "og:description", content: meta_description_content}/
+  %meta{property: "og:image", content: meta_og_image_content}/
+
   %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
   %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}/
   = stylesheet_link_tag    'community', media: 'all'
