--- a/app/assets/stylesheets/application_dynamic.scss
+++ b/app/assets/stylesheets/application_dynamic.scss
@@ -21,6 +21,7 @@
 @import "theme/components/nav";
 @import "theme/components/slider";
 @import "theme/components/custom_checkboxes_and_radios";
+@import "theme/components/datepicker";
 @import "theme/components/multiselect";
 @import "theme/components/booking_module";
 
