NM-3373 rework additional charges

--- a/app/new_ui_views/dashboard/company/products/_form_fields.html.haml
+++ b/app/new_ui_views/dashboard/company/products/_form_fields.html.haml
@@ -39,3 +39,6 @@
 
 - if only_inputs.empty? || only_inputs.include?(:documents_upload)
   = render "dashboard/company/products/form_fields/document_requirements", f: f
+
+- if only_inputs.empty? || only_inputs.include?(:additional_charges)
+  = render "dashboard/company/products/form_fields/additional_charges", f: f
