--- a/app/views/instance_admin/manage/payments/_list_table.html.haml
+++ b/app/views/instance_admin/manage/payments/_list_table.html.haml
@@ -8,6 +8,8 @@
           %th= t('instance_admin.manage.payments.state')
           %th= t('instance_admin.manage.payments.lessor_service_fees')
           %th= t('instance_admin.manage.payments.lessee_service_fees')
+          %th= t('instance_admin.manage.payments.service_addons')
+          %th= t('instance_admin.manage.payments.host_addons')
           %th= t('instance_admin.manage.payments.payment_amount')
           %th= t('instance_admin.manage.payments.payment_gateway')
           %th= t('instance_admin.manage.payments.created_at')
@@ -24,6 +26,8 @@
           %td= payment.state
           %td= humanized_money_with_cents_and_symbol(payment.service_fee_amount_guest)
           %td= humanized_money_with_cents_and_symbol(payment.service_fee_amount_host)
+          %td= humanized_money_with_cents_and_symbol(payment.service_additional_charges)
+          %td= humanized_money_with_cents_and_symbol(payment.host_additional_charges)
           %td= humanized_money_with_cents_and_symbol(payment.subtotal_amount)
           %td= payment.payable.billing_authorization.payment_gateway.try(:name) if payment.payable
           %td= l(payment.created_at, format: :long)
