--- a/app/views/spree/order_mailer/notify_seller_email.html.liquid
+++ b/app/views/spree/order_mailer/notify_seller_email.html.liquid
@@ -41,6 +41,6 @@
 
 {{ 'buy_sell_market.checkout.order_mailer.service_fee' | translate: fee: order.service_fee_amount_guest }}<br />
 
-<strong>{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount_to_charge }}</strong>
+<strong>{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount }}</strong>
 </p>
 
