--- a/app/views/spree/order_mailer/notify_seller_email.text.liquid
+++ b/app/views/spree/order_mailer/notify_seller_email.text.liquid
@@ -37,5 +37,5 @@
 ============================================================
 {{ 'buy_sell_market.checkout.order_mailer.service_fee' | translate: fee: order.service_fee_amount_guest }}
 ============================================================
-{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount_to_charge }}
+{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount }}
 
