--- a/app/new_ui_views/dashboard/company/orders_received/show.html.haml
+++ b/app/new_ui_views/dashboard/company/orders_received/show.html.haml
@@ -122,7 +122,7 @@
                 %td= humanized_money_with_cents_and_symbol @order.monetize(@order.additional_tax_total)
               %tr
                 %th= t 'buy_sell_market.checkout.labels.service_fee'
-                %td= humanized_money_with_cents_and_symbol @order.service_fee_guest_without_charges
+                %td= humanized_money_with_cents_and_symbol @order.service_fee_amount_guest
               - if @order.additional_charges.any?
                 - @order.additional_charges.each do |charge|
                   %tr
@@ -130,7 +130,7 @@
                     %td= humanized_money_with_cents_and_symbol charge.amount
               %tr
                 %th.total= t 'buy_sell_market.checkout.labels.total2'
-                %td.total= humanized_money_with_cents_and_symbol @order.total_amount_to_charge
+                %td.total= humanized_money_with_cents_and_symbol @order.total_amount
 
         %br/
 
