--- a/app/views/buy_sell_market/checkout/_summary.html.haml
+++ b/app/views/buy_sell_market/checkout/_summary.html.haml
@@ -1,6 +1,7 @@
 %section.checkout-form
   .container-fluid
     %h2= t 'buy_sell_market.checkout.labels.order_summary'
+
     %table.payment-summary
       %thead
         %th= t 'buy_sell_market.checkout.labels.item'
@@ -15,30 +16,21 @@
             %td= item.single_money
             %td= item.quantity
             %td= item.display_amount
-        - @order.additional_charges.each do |additional_charge|
-          %tr
-            %td
-              = additional_charge.name
-              = hidden_field_tag 'additional_charge_ids[]', additional_charge.additional_charge_type_id
-            %td= humanized_money_with_cents_and_symbol additional_charge.amount
-            %td= 1
-            %td= humanized_money_with_cents_and_symbol additional_charge.amount
 
-      - additional_charges = @additional_charges.try(:optional_charges).try(:where).try(:not, id: @order.additional_charges.where(status: 'optional').pluck(:additional_charge_type_id))
-      - if additional_charges.present? && !@order.paypal_express_payment?
+      - if @order.additional_charge_types.try(:optional_charges).present?
         %thead
           %th#options= t 'buy_sell_market.checkout.labels.options'
         %tbody{:'data-additional-charges' => true }
-          - additional_charges.optional_charges.each do |charge|
-            - charge.currency = @order.currency
-            %tr{:'data-additional-charge-wrapper' => true }
-              %td
-                = check_box_tag 'additional_charge_ids[]', charge.id, params[:additional_charge_ids].try(:include?, "#{charge.id}")
-                = charge.name
-
-              %td= humanized_money_with_cents_and_symbol charge.amount
-              %td 1
-              %td #{currency_content_tag(charge.amount.currency, charge.amount, :span, { class: 'additional-charge', rel: false }, { :'data-additional-charge-price' => true})}
+          = f.simple_fields_for :additional_charges do |ac|
+            - unless ac.object.mandatory?
+              %tr{:'data-additional-charge-wrapper' => true }
+                %td
+                  - if @order.express_payer_id.blank?
+                    = ac.check_box :_destroy, {checked: !ac.object.marked_for_destruction? }, '0', '1'
+                  = ac.object.name
+                %td= humanized_money_with_cents_and_symbol ac.object.amount
+                %td 1
+                %td #{currency_content_tag(ac.object.currency, ac.object.amount, :span, { class: 'additional-charge', rel: false }, { :'data-additional-charge-price' => true})}
     .divider
 
     %table.payment-totals{align: 'right'}
@@ -54,17 +46,17 @@
       %tr
         %td= t 'buy_sell_market.checkout.labels.service_fee'
         %td
-          #{currency_content_tag(@order.service_fee_guest_without_charges.currency, @order.service_fee_guest_without_charges, :span, { :rel => false }, { class: '', :'data-service-fee' => true})}
+          #{currency_content_tag(@order.service_fee_amount_guest.currency, @order.service_fee_amount_guest, :span, { :rel => false }, { class: '', :'data-service-fee' => true})}
 
 
-      - if @additional_charges.try(:mandatory_charges).present?
-        - @additional_charges.mandatory_charges.each do |charge|
+      - if @order.additional_charge_types.try(:mandatory_charges).present?
+        - @order.additional_charge_types.mandatory_charges.each do |charge|
           %tr
             %td= charge.name
             %td= humanized_money_with_cents_and_symbol charge.amount
       %tr
         %td.total= t 'buy_sell_market.checkout.labels.total2'
-        %td.total #{currency_content_tag(@order.total_amount_to_charge.currency, @order.total_amount_to_charge, :span, { :rel => false }, { :'data-total-price' => true})}
+        %td.total #{currency_content_tag(@order.currency, @order.total_amount, :span, { :rel => false }, { :'data-total-price' => true})}
 
 - if platform_context.instance.documents_upload_enabled?
   %section.checkout-form
