--- a/app/views/instance_admin/manage/additional_charge_types/index.html.haml
+++ b/app/views/instance_admin/manage/additional_charge_types/index.html.haml
@@ -1,4 +1,4 @@
-- if @additional_charges.blank?
+- if @additional_charge_types.blank?
   .content-container.blank-state-container
     .row
       .table-container.col-xs-12
@@ -6,7 +6,7 @@
           .question-icon !
           = t('instance_admin.manage.upsell_addons.no_addons_yet')
           %br
-          = link_to t('instance_admin.manage.upsell_addons.add_new_upsell'), new_instance_admin_manage_upsell_addon_path
+          = link_to t('instance_admin.manage.upsell_addons.add_new_upsell'), new_instance_admin_manage_additional_charge_type_path
 - else
   .content-container
     .row
@@ -18,6 +18,7 @@
               %td= t('instance_admin.manage.upsell_addons.service')
               %td= t('instance_admin.manage.upsell_addons.amount')
               %td= t('instance_admin.manage.upsell_addons.status')
-              %td= link_to t('instance_admin.manage.upsell_addons.add_upsell'), new_instance_admin_manage_upsell_addon_path
-            - @additional_charges.each do |ac|
-              = render partial: 'additional_charge', locals: { additional_charge: ac }
+              %td= t('instance_admin.manage.upsell_addons.commission_receiver')
+              %td= link_to t('instance_admin.manage.upsell_addons.add_upsell'), new_instance_admin_manage_additional_charge_type_path
+
+            = render @additional_charge_types
