--- a/app/views/spree/order_mailer/cancel_email.html.liquid
+++ b/app/views/spree/order_mailer/cancel_email.html.liquid
@@ -21,5 +21,5 @@
 
 <p>
 {{ 'buy_sell_market.checkout.order_mailer.service_fee' | translate: fee: order.service_fee_amount_guest }}<br />
-{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount_to_charge }}
+{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount }}
 </p>
