--- a/app/views/spree/order_mailer/confirm_email.html.liquid
+++ b/app/views/spree/order_mailer/confirm_email.html.liquid
@@ -35,7 +35,7 @@
 
 {{ 'buy_sell_market.checkout.order_mailer.service_fee' | translate: fee: order.service_fee_amount_guest }}<br />
 
-<strong>{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount_to_charge }}</strong>
+<strong>{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount }}</strong>
 </p>
 
 <p>{{ 'buy_sell_market.checkout.order_mailer.confirm_email.thanks' | translate }}</p>
