--- a/app/views/spree/order_mailer/confirm_email.text.liquid
+++ b/app/views/spree/order_mailer/confirm_email.text.liquid
@@ -31,6 +31,6 @@
 ============================================================
 {{ 'buy_sell_market.checkout.order_mailer.service_fee' | translate: fee: order.service_fee_amount_guest }}
 ============================================================
-{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount_to_charge }}
+{{ 'buy_sell_market.checkout.order_mailer.total' | translate: total: order.total_amount }}
 
 {{ 'buy_sell_market.checkout.order_mailer.confirm_email.thanks' | translate }}
